log
Thu 09 Mar 2023 04:08:04 PM UTC: 
 tests:  0|7
total_score: 0/70
ef9b54b
Thu 09 Mar 2023 04:14:31 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:13: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   int aux = a;
      |             ^
exercises.c:17:6: error: expected expression before ‘=’ token
   17 |   a* = *b;
      |      ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b* = aux;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
5790894
